fix width issue on mobile, corrected skills flexbox

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,13 +3,10 @@
 @tailwind utilities;
 
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  box-sizing: border-box;
 }
 
 a {
@@ -19,9 +16,4 @@ a {
 
 a:hover {
   text-decoration: underline;
-}
-
-img {
-  max-width: 100%;
-  display: block;
 }
